features: add loader, page-loader

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,4 +1,5 @@
 {
-	"Язык": "English",
-	"Перевод": "Translate"
+    "Язык": "English",
+    "Перевод": "Translate",
+    "Страница не найдена": "Page not found"
 }
