--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,4 +1,5 @@
 {
-	"Язык": "Русский",
-	"Перевод": "Перевод"
+    "Язык": "Русский",
+    "Перевод": "Перевод",
+    "Страница не найдена": "Страница не найдена"
 }
