--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -13,5 +13,8 @@
     "О сайте": "About us",
     "Войти": "Login",
     "Введите username": "Enter your username",
-    "Введите пароль": "Enter your password"
+    "Введите пароль": "Enter your password",
+    "Форма авторизации": "Authorization form",
+    "Вы ввели неверный логин или пароль": "You have entered an incorrect login or password",
+    "Выйти": "Logout"
 }
