--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -12,6 +12,9 @@
     "Главная": "Главная",
     "О сайте": "О сайте",
     "Войти": "Войти",
-    "Введите username": "Введите имя пользователя",
-    "Введите пароль": "Введите имя пароль"
+    "Введите username": "Введите username",
+    "Введите пароль": "Введите пароль",
+    "Форма авторизации": "Форма авторизации",
+    "Вы ввели неверный логин или пароль": "Вы ввели неверный логин или пароль",
+    "Выйти": "Выйти"
 }
