--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -16,5 +16,6 @@
     "Введите пароль": "Enter your password",
     "Форма авторизации": "Authorization form",
     "Вы ввели неверный логин или пароль": "You have entered an incorrect login or password",
-    "Выйти": "Logout"
+    "Выйти": "Logout",
+    "Страница профиля": "Profile page"
 }
