--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -16,5 +16,6 @@
     "Введите пароль": "Введите пароль",
     "Форма авторизации": "Форма авторизации",
     "Вы ввели неверный логин или пароль": "Вы ввели неверный логин или пароль",
-    "Выйти": "Выйти"
+    "Выйти": "Выйти",
+    "Страница профиля": "Страница профиля"
 }
