--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -11,11 +11,11 @@
     "throw error": "throw error",
     "Главная": "Главная",
     "О сайте": "О сайте",
+    "Профиль": "Профиль",
     "Войти": "Войти",
     "Введите username": "Введите username",
     "Введите пароль": "Введите пароль",
     "Форма авторизации": "Форма авторизации",
     "Вы ввели неверный логин или пароль": "Вы ввели неверный логин или пароль",
-    "Выйти": "Выйти",
-    "Страница профиля": "Страница профиля"
+    "Выйти": "Выйти"
 }
