features: add private routes, ui select, country select, currency select, ui avatar

--- a/public/locales/en/profile.json
+++ b/public/locales/en/profile.json
@@ -1,5 +1,17 @@
 {
     "Страница профиля": "Profile page",
+    "Профиль": "Profile",
     "Редактировать": "Edit",
-    "Ваше имя": "Your name"
+    "Отменить": "Cancel",
+    "Сохранить": "Save",
+    "Ваше имя": "Your name",
+    "Ваша фамилия": "Your last name",
+    "Возраст": "Age",
+    "Город": "City",
+    "Валюта": "Currency",
+    "Страна": "Country",
+    "Имя пользователя": "Username",
+    "Ссылка на аватар": "Avatar URL",
+    "Произошла ошибка при загрузке профиля": "There was an error loading your profile",
+    "Попробуйте обновить страницу": "Try refreshing the page"
 }
