--- a/public/locales/ru/profile.json
+++ b/public/locales/ru/profile.json
@@ -1,5 +1,17 @@
 {
     "Страница профиля": "Страница профиля",
+    "Профиль": "Профиль",
     "Редактировать": "Редактировать",
-    "Ваше имя": "Ваше имя"
+    "Отменить": "Отменить",
+    "Сохранить": "Сохранить",
+    "Ваше имя": "Ваше имя",
+    "Ваша фамилия": "Ваша фамилия",
+    "Возраст": "Возраст",
+    "Город": "Город",
+    "Валюта": "Валюта",
+    "Страна": "Страна",
+    "Имя пользователя": "Имя пользователя",
+    "Ссылка на аватар": "Ссылка на аватар",
+    "Произошла ошибка при загрузке профиля": "Произошла ошибка при загрузке профиля",
+    "Попробуйте обновить страницу": "Попробуйте обновить страницу"
 }
