--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -17,5 +17,7 @@
     "Введите пароль": "Введите пароль",
     "Форма авторизации": "Форма авторизации",
     "Вы ввели неверный логин или пароль": "Вы ввели неверный логин или пароль",
-    "Выйти": "Выйти"
+    "Выйти": "Выйти",
+    "Валюта": "Валюта",
+    "Страна": "Страна"
 }
