--- a/public/locales/ru/profile.json
+++ b/public/locales/ru/profile.json
@@ -13,5 +13,10 @@
     "Имя пользователя": "Имя пользователя",
     "Ссылка на аватар": "Ссылка на аватар",
     "Произошла ошибка при загрузке профиля": "Произошла ошибка при загрузке профиля",
-    "Попробуйте обновить страницу": "Попробуйте обновить страницу"
+    "Попробуйте обновить страницу": "Попробуйте обновить страницу",
+    "Некорректные пользовательские данные": "Некорректные пользовательские данные",
+    "Некорректный возраст": "Некорректный возраст",
+    "Некорректная страна": "Некорректная страна",
+    "Данные отсутствуют": "Данные отсутствуют",
+    "Ошибка сервера": "Ошибка сервера"
 }
