features: add articles, articles details ui

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -12,6 +12,8 @@
     "Главная": "Главная",
     "О сайте": "О сайте",
     "Профиль": "Профиль",
+    "Статья": "Статья",
+    "Статьи": "Статьи",
     "Войти": "Войти",
     "Введите username": "Введите username",
     "Введите пароль": "Введите пароль",
