--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -12,6 +12,8 @@
     "Главная": "Main",
     "О сайте": "About us",
     "Профиль": "Profile",
+    "Статья": "Article",
+    "Статьи": "Articles",
     "Войти": "Login",
     "Введите username": "Enter your username",
     "Введите пароль": "Enter your password",
